# Dice-Roller

./: .gitignore  CMakeLists.txt  DiceRoller.qmlproject  README.md  qds.cmake
App/: CMakeLists.txt  ScaleUI.h  diceroller.cpp  diceroller.h  main.cpp
App/autogen/: environment.h
DiceRoller/: CMakeLists.txt  Constants.qml  Theme.qml  qmldir
DiceRoller/designer/: plugin.metainfo
DiceRollerContent/: App.qml  CMakeLists.txt  DiceButton.qml  Example.qml  MainScreen.ui.qml  OptionButton.qml  RandomDisplay.qml  SpinnableCoin.qml  TotalDisplay.qml
android/: AndroidManifest.xml  gradle.properties
android/src/: AndroidJNI.h
android/src/com/diceroller/app/: Helper.java
cmake/: qmlcomponents.cmake
